<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIN="navigation_view">

    <item android:title="@string/my_diet">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/home"/>

            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_calendar_black_24dp"
                android:title="@string/calendar"/>

            <item
                android:id="@+id/nav_recommendation"
                android:icon="@drawable/ic_summary_black_24dp"
                android:title="@string/recommendations" />


        </menu>
    </item>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile_black_24dp"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_my_pledge"
                android:icon="@drawable/fui_ic_mail_white_24dp"
                android:title="@string/my_pledge" />

            <item
                android:id="@+id/nav_pledge"
                android:icon="@drawable/ic_pledges_black_24dp"
                android:title="@string/shared_pledges" />
            <item
                android:id="@+id/nav_restaurant"
                android:icon="@drawable/ic_place_black_24dp"
                android:title="@string/restaurant_meal" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />

        </menu>
    </item>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/about" />

    <item android:id="@+id/nav_signout"
        android:icon="@drawable/ic_sign_out_black_24dp"
        android:title="@string/sign_out" />

</menu>