<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:id="@+id/textScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/testpic" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_about"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_title_about"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/footprint_about"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_title_about"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contributes_about"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_title_about"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="20sp"
                android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/impact_about"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/foodco2"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourth_title_about"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_about"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvLinkify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp"/>
    </LinearLayout>

</ScrollView>