<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.sfu.greenfoodchallenge.ui.PledgeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/tw__btn_composer_tweet"
            android:contentDescription="@string/user_icon"
            android:src="@drawable/icon1" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:text="@string/welcome_username"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="71dp"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/user_pledge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_have_pledged"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_pledges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:text="@string/number_of_pledges"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avg_pledges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:text="@string/average_pledge"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_co2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:text="@string/total_co2e_pledged"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/equivalent_statement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:text="@string/which_is_equivalent_to"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/km_equiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="12dp"
            android:text="@string/x_km_driven_in_a_car"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coal_equiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="12dp"
            android:text="@string/x_lb_of_coal_burned"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_equiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="12dp"
            android:text="@string/x_homes_powered_per_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tree_equiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="12dp"
            android:text="@string/x_trees_planted"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>