<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/user_icon_pledge"
        android:layout_width="74dp"
        android:layout_height="56dp"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignStart="@id/user_icon_pledge">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />
        <TextView
            android:id="@+id/municipality_pledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/municipality"/>

        <TextView
            android:id="@+id/user_pledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pledge_amount" />
    </LinearLayout>


</LinearLayout>
