<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second_profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ca.sfu.greenfoodchallenge.ui.SecondPledgeFragment"
    tools:layout_editor_absoluteY="25dp">

    <ProgressBar
        android:id="@+id/profile_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/wallpaper_compressed" />

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="wrap_content"
            android:layout_height="107dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="62dp"
            android:background="@drawable/round_popups"
            android:backgroundTint="@color/colorIcon"
            android:src="@mipmap/ic_app_round" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textCapWords|textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lastInitial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_initial"
                android:inputType="textCapWords"
                android:maxLength="1"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/municipality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/municipalities_prompt"></Spinner>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pledge_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pledge_amount"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="flagNoAccessoryAction"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_buttons"
            android:text="@string/delete_pledge"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="bottom|right"
            android:layout_weight="1"
            android:background="@drawable/round_buttons"
            android:text="@string/save"
            android:textColor="@android:color/background_light" />
    </LinearLayout>
</LinearLayout>